--- a/src/app/moduleAdmin/pages/OrderSection/order-ajout/order-ajout.component.html
+++ b/src/app/moduleAdmin/pages/OrderSection/order-ajout/order-ajout.component.html
@@ -5,14 +5,14 @@
     <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Ajout Commande</h1>
     <div class="col-lg-6">
 
-      
+
       <form #orderForm="ngForm" (ngSubmit)="createOrder()" class="needs-validation">
         <h4 class="mb-3">Informations du Client</h4>
-  
+
         <div class=" mb-3">
           <label for="email">Email</label>
-          <input type="email" class="form-control" id="email" [(ngModel)]="order.customer.email" name="email" #email="ngModel"
-            required>
+          <input type="email" class="form-control" id="email" [(ngModel)]="order.customer.email" name="email"
+            #email="ngModel" required>
           <div class="mt-3">
             <button type="button" (click)="triggerFindUser(email.value)" class="btn btn-primary">Rechercher
               Client</button>
@@ -44,6 +44,13 @@
 
         <!-- Address Details -->
         <h4 class="mb-3">Informations de l'adresse de livraison</h4>
+
+        <div class="form-check mb-3">
+          <input type="checkbox" id="usePersonalAddress" class="form-check-input" [(ngModel)]="usePersonalAddress"
+            (change)="fillShippingAddress()"name="usePersonalAddress" />
+          <label class="form-check-label" for="usePersonalAddress">Utiliser adresse personnelle</label>
+        </div>
+        
         <div class="mb-3">
           <label for="adresse">Adresse</label>
           <input type="text" id="adresse" name="adresse" class="form-control"
@@ -66,12 +73,12 @@
         </div>
         <div class="mb-3">
           <label for="codePostal">Code Postal</label>
-          <input type="text" id="codePostal" name="codePostal" class="form-control" placeholder="A1A 1A1"
+          <input type="text" id="codePostal" name="codePostal" class="form-control" placeholder="ex: A1B 2C3"
             [(ngModel)]="order.shippingAddress.postalCode" required pattern="^[A-Za-z]\d[A-Za-z](?: ?\d[A-Za-z]\d)?$"
             #postalField="ngModel" [ngClass]="{ 'is-invalid': postalField.invalid && postalField.touched }" />
           <div class="invalid-feedback" *ngIf="postalField.errors?.['required']">Code postal obligatoire.</div>
           <div class="invalid-feedback" *ngIf="postalField.errors?.['pattern']">Format du code postal invalide. Doit
-            être "A1B 2C3</div>
+            être A1B 2C3</div>
         </div>
         <div class="mb-3">
           <label for="pays">Pays</label>
@@ -127,8 +134,6 @@
                 <button type="button" class="btn btn-danger" (click)="removeProduct(i)">Supprimer</button>
               </td>
             </tr>
-
-
           </tbody>
         </table>
         <button type="button" class="btn btn-primary mb-3" (click)="addProduct()">Ajouter Produit</button>
