jai pratiquement just mis des commentaire et delete des services non utilise

--- a/src/app/pages/acceuil-lion/carte-categorie/carte-categorie.component.html
+++ b/src/app/pages/acceuil-lion/carte-categorie/carte-categorie.component.html
@@ -1,3 +1,4 @@
+<!--Use of a section in order to display a category as a single card-->
 <section class="listing">
     <a [routerLink]="['/products/', acceuilCarteInput.id]">
         <h3 class="listing-heading">{{acceuilCarteInput.nom}}</h3>
