--- a/src/app/pages/account-details/account-details.component.html
+++ b/src/app/pages/account-details/account-details.component.html
@@ -1,13 +1,13 @@
 <div class="container">
     <div class="row gx-5">
 
-        
+        <!--SIDE BAR COMPONENT-->
         <div class="col-4 d-none d-md-block">
             <app-account-sidebar></app-account-sidebar>
         </div>
 
+        <!--OFFCANVAS SIDEBAR TO SHOW ONLY IN RESPONSIBE VIEW-->
         <div class="d-md-none">
-            
             <button class="btn mt-4" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasSidebar"
                 aria-controls="offcanvasSidebar" id="offcanvasButton">
                 <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="black" class="bi bi-list" viewBox="0 0 16 16">
