--- a/src/app/pages/account-details/account-sidebar/account-sidebar.component.html
+++ b/src/app/pages/account-details/account-sidebar/account-sidebar.component.html
@@ -1,7 +1,9 @@
+    
     <div class="container-fluid">
         <div class="row">
             <div class="col">
                 <ul class="nav flex-column">
+                    <!--LIST ITEM PERSONAL INFORMATION-->
                     <li class="nav-item mt-5 mb-3">
                         <a role="button" routerLink="/account-details/personalInfo"  routerLinkActive="active" class="nav-link link-body-emphasis" >
                             <svg xmlns="http://www.w3.org/2000/svg" width="30" height="36" fill="currentColor"
@@ -12,6 +14,7 @@
                             </svg> Personal Information
                         </a>
                     </li>
+                    <!--LIST ITEM ORDERS-->
                     <li class="nav-item mb-3">
                         <a role="button" routerLink="/account-details/orders" routerLinkActive="active" class="nav-link link-body-emphasis">
                             <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="black" class="bi bi-bag-check"
