--- a/src/app/pages/acceuil-lion/acceuil-lion.component.html
+++ b/src/app/pages/acceuil-lion/acceuil-lion.component.html
@@ -10,8 +10,8 @@
             aria-label="Slide 3"></button>
     </div>
 
-
-    <div class="carousel-inner"> <!--Check if ngFor might used to display the carousel images-->
+    <!--Carousel item used to display the rotating pictures on front page-->
+    <div class="carousel-inner">
 
         <div class="carousel-item active c-item">
             <img src="/assets/images/promo/promo.jpg" class="d-block w-100 c-image" alt="...">
@@ -27,6 +27,7 @@
 
     </div>
 
+    <!--Buttons to scroll in the carousel-->
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselPromo" data-bs-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Previous</span>
@@ -38,6 +39,7 @@
     </button>
 </div>
     
+<!--Input to display each category as a card on front page-->
 <section class="results">
     <app-carte-categorie
         *ngFor="let i of acceuilCarteList"
@@ -45,68 +47,6 @@
     </app-carte-categorie>
 </section>
 
-        <!--Check if ngFor could be used to display the Categories-->
-        <!--
-        <div class="container"> 
-            <h1>Categories</h1>
-            <div class="row gy-5 d-flex align-items-stretch ">
-        
-                <div class="col-sm-3 mb-3">
-                    <div class="card h-100">
-                        <div class="card-body">
-                            <label class="card-title text-wrap fs-5">Sale</label> 
-                            <img class="img-fluid" src="/assets/images/categories/sale-logo.jpg" alt="">
-                        </div>
-                    </div>
-                </div>
-        
-                <div class="col-sm-3 mb-3">
-                    <div class="card h-100">
-                        <div class="card-body">
-                            <label class="card-title text-wrap fs-5">Desktops</label>
-                            <img class="img-fluid" src="/assets/images/categories/tower.jpg" alt="">
-                        </div>
-                    </div>
-                </div>
-        
-                <div class="col-sm-3 mb-3">
-                    <div class="card h-100">
-                        <div class="card-body ">
-                            <label class="card-title text-wrap fs-5">Laptops</label>
-                            <img class="img-fluid" src="/assets/images/categories/laptop.jpg"  alt="">
-                        </div>
-                    </div>
-                </div>
-        
-                <div class="col-sm-3 mb-3">
-                    <div class="card h-100">
-                        <div class="card-body text-center">
-                            <label class="card-title text-wrap fs-5">Screens</label>
-                            <img class="img-fluid" src="/assets/images/categories/monitor.jfif"  alt="">
-                        </div>
-                    </div>
-                </div>
-        
-                <div class="col-sm-3 mb-3">
-                    <div class="card h-100">
-                        <div class="card-body text-center">
-                            <label class="card-title text-wrap fs-5">Phones</label>
-                            <img class="img-fluid" src="/assets/images/categories/phone.jfif" alt="">
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-sm-3 mb-3">
-                    <div class="card h-100">
-                        <div class="card-body">
-                            <label class="card-title text-wrap fs-5">Headhpone</label>
-                            <img class="img-fluid" src="/assets/images/categories/headphones.jpg" alt="">
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-        </div>-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 
